UTCT-24: Fix gap below mobile menu.

--- a/user/plugins/sleeky-backend/assets/css/_base.scss
+++ b/user/plugins/sleeky-backend/assets/css/_base.scss
@@ -807,7 +807,7 @@ body > div > pre {
   }
 
   img.logo {
-    padding: 9px 100% 8px 20px;
+    padding: 11px 100% 10px 20px;
   }
 
   .nav-open {
